[project]
name = "qcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill==0.3.9",
    "mpmath==1.3.0",
    "numpy==2.1.2",
    "pbr==6.1.0",
    "psutil==6.1.0",
    "python-dateutil==2.9.0.post0",
    "qiskit==1.3.2",
    "qiskit-aer==0.15.1",
    "rustworkx==0.15.1",
    "scipy==1.14.1",
    "six==1.16.0",
    "stevedore==5.3.0",
    "symengine==0.13.0",
    "sympy==1.13.3",
    "typing-extensions==4.12.2",
]
